impl animator and use to run speedo

--- a/public/speedometer.html
+++ b/public/speedometer.html
@@ -8,7 +8,9 @@
             <h2>Speedometer</h2>
             <canvas id="speedometer" width="402" height="202">Speedometer</canvas>
         </div>
-    <script src="js/underscore.js"></script>
-    <script src="js/speedometer.js"></script>
+        <script src="js/underscore.js"></script>
+        <script src="js/animator.js"></script>
+        <script src="js/speedometer.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
