use bower package for animator

--- a/public/speedometer.html
+++ b/public/speedometer.html
@@ -12,9 +12,10 @@
         <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJv0LBz4RjIg2yDsA3mtNEWJcw0bbou7c&sensor=true">
         </script>
+        <script src="../bower_components/animationFrame/AnimationFrame.js"></script>
+        <script src="../bower_components/underscore/underscore.js"></script>
+        <script src="../bower_components/timeseries-animator/animator.js"></script>
         <script src="js/mapper.js"></script>
-        <script src="js/underscore.js"></script>
-        <script src="js/animator.js"></script>
         <script src="js/speedometer.js"></script>
         <script src="js/main.js"></script>
     </body>
